--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,14 +5,14 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-2.40MB/s(Youtube:不良林), server: 38.68.134.85, port: 3306, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇳🇱 荷兰-417.1KB/s(Youtube:不良林), server: 213.183.59.229, port: 9010, type: ss, cipher: aes-256-cfb, password: f63gg8EruDnUrmz4}
-  - {name: 🇬🇧 英国-1.02MB/s(Youtube:不良林), server: 172.99.190.39, port: 2375, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
-  - {name: 波兰-1.36MB/s(Youtube:不良林), server: 217.30.10.63, port: 9046, type: ss, cipher: aes-256-cfb, password: NvS8N4Vf8qAGPSCL}
-  - {name: 🇺🇸 美国-958.9KB/s(Youtube:不良林), server: 38.121.43.71, port: 8091, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
-  - {name: 🇺🇸 美国-3.57MB/s(Youtube:不良林), server: 38.114.114.19, port: 7002, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
+  - {name: 🇨🇳 中国-517.7KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34000, type: trojan, password: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇫🇷 法国-1.77MB/s(Youtube:不良林), server: 149.202.82.172, port: 9101, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
+  - {name: 🇦🇺 澳大利亚-1.41MB/s(Youtube:不良林), server: 185.167.116.252, port: 9015, type: ss, cipher: aes-256-cfb, password: ZpNDDKRu9MagNvaf}
+  - {name: 🇯🇵 日本-2.18MB/s(Youtube:不良林), server: 85.208.108.20, port: 7002, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
+  - {name: 🇳🇱 荷兰-1.80MB/s(Youtube:不良林), server: 213.183.59.185, port: 9046, type: ss, cipher: aes-256-cfb, password: NvS8N4Vf8qAGPSCL}
+  - {name: 🇺🇸 美国-1.72MB/s(Youtube:不良林), server: 38.114.114.19, port: 7002, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
   - {name: 🇺🇸 美国-1.27MB/s(Youtube:不良林), server: 38.114.114.69, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
-  - {name: 🇺🇸 美国-3.78MB/s(Youtube:不良林), server: ifffffffuuuuuuus.qiqicdn2.cf, port: 443, type: vmess, uuid: 5a36cce4-0527-4d36-bf4a-6c215ef9c524, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /5a36cce4-0527-4d36-bf4a-6c215ef9c524-vmess, ws-headers: {Host: ifffffffuuuuuuus.qiqicdn2.cf}}
+  - {name: 未知国家-3.78MB/s(Youtube:不良林), server: ifffffffuuuuuuus.qiqicdn2.cf, port: 443, type: vmess, uuid: 5a36cce4-0527-4d36-bf4a-6c215ef9c524, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /5a36cce4-0527-4d36-bf4a-6c215ef9c524-vmess, ws-headers: {Host: ifffffffuuuuuuus.qiqicdn2.cf}}
   - {name: 🇺🇸 美国-4.29MB/s(Youtube:不良林), server: 51.81.223.17, port: 443, type: vmess, uuid: c0156451-4efb-45e2-84fc-8d315c4650db, alterId: 32, cipher: auto, tls: false, skip-cert-verify: true}
   - {name: 🇺🇸 美国-3.39MB/s(Youtube:不良林), server: 51.81.223.15, port: 443, type: vmess, uuid: c0156451-4efb-45e2-84fc-8d315c4650db, alterId: 32, cipher: auto, tls: false, skip-cert-verify: true}
 proxy-groups:
@@ -21,14 +21,14 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-2.40MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-417.1KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.02MB/s(Youtube:不良林)
-      - 波兰-1.36MB/s(Youtube:不良林)
-      - 🇺🇸 美国-958.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.57MB/s(Youtube:不良林)
+      - 🇨🇳 中国-517.7KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.77MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.41MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.18MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.80MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.72MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.27MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.78MB/s(Youtube:不良林)
+      - 未知国家-3.78MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.29MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.39MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
@@ -36,14 +36,14 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-2.40MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-417.1KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.02MB/s(Youtube:不良林)
-      - 波兰-1.36MB/s(Youtube:不良林)
-      - 🇺🇸 美国-958.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.57MB/s(Youtube:不良林)
+      - 🇨🇳 中国-517.7KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.77MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.41MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.18MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.80MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.72MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.27MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.78MB/s(Youtube:不良林)
+      - 未知国家-3.78MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.29MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.39MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
@@ -52,14 +52,14 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-2.40MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-417.1KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.02MB/s(Youtube:不良林)
-      - 波兰-1.36MB/s(Youtube:不良林)
-      - 🇺🇸 美国-958.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.57MB/s(Youtube:不良林)
+      - 🇨🇳 中国-517.7KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.77MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.41MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.18MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.80MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.72MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.27MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.78MB/s(Youtube:不良林)
+      - 未知国家-3.78MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.29MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.39MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
@@ -72,14 +72,14 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-2.40MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-417.1KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.02MB/s(Youtube:不良林)
-      - 波兰-1.36MB/s(Youtube:不良林)
-      - 🇺🇸 美国-958.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.57MB/s(Youtube:不良林)
+      - 🇨🇳 中国-517.7KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.77MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.41MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.18MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.80MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.72MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.27MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.78MB/s(Youtube:不良林)
+      - 未知国家-3.78MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.29MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.39MB/s(Youtube:不良林)
   - name: 📲 电报信息
@@ -87,14 +87,14 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-2.40MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-417.1KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.02MB/s(Youtube:不良林)
-      - 波兰-1.36MB/s(Youtube:不良林)
-      - 🇺🇸 美国-958.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.57MB/s(Youtube:不良林)
+      - 🇨🇳 中国-517.7KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.77MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.41MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.18MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.80MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.72MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.27MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.78MB/s(Youtube:不良林)
+      - 未知国家-3.78MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.29MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.39MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
@@ -103,14 +103,14 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-2.40MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-417.1KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.02MB/s(Youtube:不良林)
-      - 波兰-1.36MB/s(Youtube:不良林)
-      - 🇺🇸 美国-958.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.57MB/s(Youtube:不良林)
+      - 🇨🇳 中国-517.7KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.77MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.41MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.18MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.80MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.72MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.27MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.78MB/s(Youtube:不良林)
+      - 未知国家-3.78MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.29MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.39MB/s(Youtube:不良林)
   - name: 🎯 全球直连
@@ -128,14 +128,14 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-2.40MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-417.1KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.02MB/s(Youtube:不良林)
-      - 波兰-1.36MB/s(Youtube:不良林)
-      - 🇺🇸 美国-958.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.57MB/s(Youtube:不良林)
+      - 🇨🇳 中国-517.7KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.77MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.41MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.18MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.80MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.72MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.27MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.78MB/s(Youtube:不良林)
+      - 未知国家-3.78MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.29MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.39MB/s(Youtube:不良林)
 rules:
