--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇯🇵 日本-3.37MB/s(Youtube:不良林), server: 85.208.108.20, port: 6379, type: ss, cipher: aes-256-gcm, password: zDNVedRFPQexG9v}
-  - {name: 🇫🇷 法国-1000.2KB/s(Youtube:不良林), server: 145.239.1.100, port: 8000, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
-  - {name: 🇳🇱 荷兰-1.20MB/s(Youtube:不良林), server: 213.183.59.229, port: 9007, type: ss, cipher: aes-256-cfb, password: kSPmvwdFzGMMW5pY}
-  - {name: 🇦🇺 澳大利亚-632.2KB/s(Youtube:不良林), server: 185.167.116.252, port: 9041, type: ss, cipher: aes-256-cfb, password: U6qnYRhfyDmn8sgn}
-  - {name: 🇦🇺 澳大利亚-2.50MB/s(Youtube:不良林), server: 185.167.116.24, port: 9007, type: ss, cipher: aes-256-cfb, password: kSPmvwdFzGMMW5pY}
+  - {name: 🇯🇵 日本-1.58MB/s(Youtube:不良林), server: 85.208.108.20, port: 6697, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
+  - {name: 🇳🇱 荷兰-1.48MB/s(Youtube:不良林), server: 185.246.155.35, port: 9045, type: ss, cipher: aes-256-cfb, password: Lp27rqyJq72bZsqX}
+  - {name: 🇳🇱 荷兰-1.12MB/s(Youtube:不良林), server: 213.183.59.229, port: 9070, type: ss, cipher: aes-256-cfb, password: bf7v334KKDV3YDhH}
+  - {name: 🇺🇸 美国-3.25MB/s(Youtube:不良林), server: 38.114.114.69, port: 3389, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇫🇷 法国-1.40MB/s(Youtube:不良林), server: 149.202.82.172, port: 5601, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇺🇸 美国-243.2KB/s(Youtube:不良林), server: 38.75.136.21, port: 2375, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
   - {name: 🇺🇸 美国-1.17MB/s(Youtube:不良林), server: 38.114.114.69, port: 8118, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
   - {name: 🇺🇸 美国-1.72MB/s(Youtube:不良林), server: 38.114.114.19, port: 7002, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
   - {name: 🇺🇸 美国-1.27MB/s(Youtube:不良林), server: 38.114.114.69, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
-  - {name: 未知国家-3.78MB/s(Youtube:不良林), server: ifffffffuuuuuuus.qiqicdn2.cf, port: 443, type: vmess, uuid: 5a36cce4-0527-4d36-bf4a-6c215ef9c524, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /5a36cce4-0527-4d36-bf4a-6c215ef9c524-vmess, ws-headers: {Host: ifffffffuuuuuuus.qiqicdn2.cf}}
-  - {name: 🇺🇸 美国-3.39MB/s(Youtube:不良林), server: 51.81.223.15, port: 443, type: vmess, uuid: c0156451-4efb-45e2-84fc-8d315c4650db, alterId: 32, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-3.78MB/s(Youtube:不良林), server: ifffffffuuuuuuus.qiqicdn2.cf, port: 443, type: vmess, uuid: 5a36cce4-0527-4d36-bf4a-6c215ef9c524, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /5a36cce4-0527-4d36-bf4a-6c215ef9c524-vmess, ws-headers: {Host: ifffffffuuuuuuus.qiqicdn2.cf}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-3.37MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1000.2KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.20MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-632.2KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.50MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.58MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.48MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.12MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.25MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.40MB/s(Youtube:不良林)
+      - 🇺🇸 美国-243.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.17MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.72MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.27MB/s(Youtube:不良林)
-      - 未知国家-3.78MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.39MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.78MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇯🇵 日本-3.37MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1000.2KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.20MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-632.2KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.50MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.58MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.48MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.12MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.25MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.40MB/s(Youtube:不良林)
+      - 🇺🇸 美国-243.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.17MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.72MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.27MB/s(Youtube:不良林)
-      - 未知国家-3.78MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.39MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.78MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-3.37MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1000.2KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.20MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-632.2KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.50MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.58MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.48MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.12MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.25MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.40MB/s(Youtube:不良林)
+      - 🇺🇸 美国-243.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.17MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.72MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.27MB/s(Youtube:不良林)
-      - 未知国家-3.78MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.39MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.78MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇯🇵 日本-3.37MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1000.2KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.20MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-632.2KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.50MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.58MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.48MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.12MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.25MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.40MB/s(Youtube:不良林)
+      - 🇺🇸 美国-243.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.17MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.72MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.27MB/s(Youtube:不良林)
-      - 未知国家-3.78MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.39MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.78MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇯🇵 日本-3.37MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1000.2KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.20MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-632.2KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.50MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.58MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.48MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.12MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.25MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.40MB/s(Youtube:不良林)
+      - 🇺🇸 美国-243.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.17MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.72MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.27MB/s(Youtube:不良林)
-      - 未知国家-3.78MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.39MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.78MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-3.37MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1000.2KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.20MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-632.2KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.50MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.58MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.48MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.12MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.25MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.40MB/s(Youtube:不良林)
+      - 🇺🇸 美国-243.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.17MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.72MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.27MB/s(Youtube:不良林)
-      - 未知国家-3.78MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.39MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.78MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-3.37MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1000.2KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.20MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-632.2KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.50MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.58MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.48MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.12MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.25MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.40MB/s(Youtube:不良林)
+      - 🇺🇸 美国-243.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.17MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.72MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.27MB/s(Youtube:不良林)
-      - 未知国家-3.78MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.39MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.78MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
