--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇯🇵 日本-1.58MB/s(Youtube:不良林), server: 85.208.108.20, port: 6697, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
-  - {name: 🇳🇱 荷兰-1.48MB/s(Youtube:不良林), server: 185.246.155.35, port: 9045, type: ss, cipher: aes-256-cfb, password: Lp27rqyJq72bZsqX}
-  - {name: 🇳🇱 荷兰-1.12MB/s(Youtube:不良林), server: 213.183.59.229, port: 9070, type: ss, cipher: aes-256-cfb, password: bf7v334KKDV3YDhH}
-  - {name: 🇺🇸 美国-3.25MB/s(Youtube:不良林), server: 38.114.114.69, port: 3389, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇫🇷 法国-1.40MB/s(Youtube:不良林), server: 149.202.82.172, port: 5601, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 保加利亚-662.4KB/s(Youtube:不良林), server: 213.183.63.221, port: 9010, type: ss, cipher: aes-256-cfb, password: f63gg8EruDnUrmz4}
+  - {name: 🇺🇸 美国-1.22MB/s(Youtube:不良林), server: 38.68.134.85, port: 8118, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
+  - {name: 🇺🇸 美国-2.45MB/s(Youtube:不良林), server: 38.68.134.85, port: 2375, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
+  - {name: 🇬🇧 英国-512.9KB/s(Youtube:不良林), server: 172.99.190.39, port: 9102, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
+  - {name: 🇳🇱 荷兰-2.60MB/s(Youtube:不良林), server: 213.183.59.214, port: 9070, type: ss, cipher: aes-256-cfb, password: bf7v334KKDV3YDhH}
   - {name: 🇺🇸 美国-243.2KB/s(Youtube:不良林), server: 38.75.136.21, port: 2375, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
   - {name: 🇺🇸 美国-1.17MB/s(Youtube:不良林), server: 38.114.114.69, port: 8118, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
   - {name: 🇺🇸 美国-1.72MB/s(Youtube:不良林), server: 38.114.114.19, port: 7002, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-1.58MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.48MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.12MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.25MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.40MB/s(Youtube:不良林)
+      - 保加利亚-662.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.22MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.45MB/s(Youtube:不良林)
+      - 🇬🇧 英国-512.9KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.60MB/s(Youtube:不良林)
       - 🇺🇸 美国-243.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.17MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.72MB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇯🇵 日本-1.58MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.48MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.12MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.25MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.40MB/s(Youtube:不良林)
+      - 保加利亚-662.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.22MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.45MB/s(Youtube:不良林)
+      - 🇬🇧 英国-512.9KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.60MB/s(Youtube:不良林)
       - 🇺🇸 美国-243.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.17MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.72MB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-1.58MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.48MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.12MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.25MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.40MB/s(Youtube:不良林)
+      - 保加利亚-662.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.22MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.45MB/s(Youtube:不良林)
+      - 🇬🇧 英国-512.9KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.60MB/s(Youtube:不良林)
       - 🇺🇸 美国-243.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.17MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.72MB/s(Youtube:不良林)
@@ -72,11 +72,11 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇯🇵 日本-1.58MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.48MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.12MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.25MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.40MB/s(Youtube:不良林)
+      - 保加利亚-662.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.22MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.45MB/s(Youtube:不良林)
+      - 🇬🇧 英国-512.9KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.60MB/s(Youtube:不良林)
       - 🇺🇸 美国-243.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.17MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.72MB/s(Youtube:不良林)
@@ -87,11 +87,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇯🇵 日本-1.58MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.48MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.12MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.25MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.40MB/s(Youtube:不良林)
+      - 保加利亚-662.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.22MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.45MB/s(Youtube:不良林)
+      - 🇬🇧 英国-512.9KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.60MB/s(Youtube:不良林)
       - 🇺🇸 美国-243.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.17MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.72MB/s(Youtube:不良林)
@@ -103,11 +103,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-1.58MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.48MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.12MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.25MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.40MB/s(Youtube:不良林)
+      - 保加利亚-662.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.22MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.45MB/s(Youtube:不良林)
+      - 🇬🇧 英国-512.9KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.60MB/s(Youtube:不良林)
       - 🇺🇸 美国-243.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.17MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.72MB/s(Youtube:不良林)
@@ -128,11 +128,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-1.58MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.48MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.12MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.25MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.40MB/s(Youtube:不良林)
+      - 保加利亚-662.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.22MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.45MB/s(Youtube:不良林)
+      - 🇬🇧 英国-512.9KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.60MB/s(Youtube:不良林)
       - 🇺🇸 美国-243.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.17MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.72MB/s(Youtube:不良林)
